[project]
name = "networkconfparse"
version = "0.1.0"
description = "Parse whitespace-based network configuration into a tree of parent/child relationships."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.54",
    "xenon>=0.9.3",
]
