[project]
name = "networkconfparse"
version = "0.1.0"
description = "Parse whitespace-based network configuration into a tree of parent/child relationships."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "W",  # pycodestyle warnings
    "C90",# flake8-mccabe complexity
    "N",  # pep8-naming
    "UP", # pyupgrade
    "ANN",# flake8-annotations
    "D",  # pydocstyle
    "T",  # flake8-print (includes T201 for pdb, replacing debug-statements hook)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "ruff==0.15.20",
    "ty==0.0.54",
    "xenon==0.9.3",
]
