[project]
name = "networkconfparse"
dynamic = ["version"]
description = "Parse whitespace-based network configuration into a tree of parent/child relationships."
readme = "README.md"
authors = [
    { name = "Christopher Hart", email = "christopherjhart95@gmail.com" },
    { name = "Andrea Testino", email = "aitestino@gmail.com" },
]
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = [
    "network",
    "configuration",
    "config",
    "parser",
    "cisco",
    "ios",
    "iosxe",
    "iosxr",
    "nxos",
    "automation",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["networkconfparse"]

[tool.hatch.build.hooks.vcs]
version-file = "networkconfparse/_version.py"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ty.src]
# The docs build script imports mkdocs plugins from the optional ``docs``
# group, which is not installed in the type-checking CI job. It is build
# tooling, not library code, so it is excluded from type checking.
exclude = ["docs"]

[tool.ruff]
exclude = ["networkconfparse/_version.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "W",  # pycodestyle warnings
    "C90",# flake8-mccabe complexity
    "N",  # pep8-naming
    "UP", # pyupgrade
    "ANN",# flake8-annotations
    "D",  # pydocstyle
    "T",  # flake8-print (includes T201 for pdb, replacing debug-statements hook)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
title_format = "## {version} - {project_date}"
issue_format = "[#{issue}](https://github.com/ChartinoLabs/networkconfparse/pull/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.20",
    "towncrier==25.8.0",
    "ty==0.0.56",
    "xenon==0.9.3",
]
docs = [
    "mkdocs-gen-files==0.6.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.7.6",
    "mkdocs-section-index==0.3.10",
    "mkdocstrings[python]==1.0.4",
]
